--- a/Nginx/default.conf
+++ b/Nginx/default.conf
@@ -7,8 +7,13 @@ server {
     error_log  /var/log/nginx/error.log  error;
 
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+            try_files $uri $uri/ @router;
+            index index.html;
+        }
+
+
+location @router {
+        rewrite ^.*$ /index.html last;
     }
 
     #error_page  404              /404.html;
