--- a/Nginx/default.conf
+++ b/Nginx/default.conf
@@ -1,6 +1,34 @@
-server {
+ttp {
+    #sendfile 指令指定 nginx 是否调用 sendfile 函数（zero copy 方式）来输出文件，对于普通应用，
+    sendfile        on;
+    #tcp_nopush     on;
 
-    location / {
-      try_files $uri $uri/ /index.html;
+    #keepalive_timeout  0;
+    keepalive_timeout  65;
+
+    # 开启GZIP
+    gzip  on;
+
+    # # 监听 80 端口，转发请求到 3000 端口
+    server {
+        #监听端口
+        listen    5423;
+        #编码格式
+        charset utf-8;
+
+        # 前端静态文件资源
+        location / {
+	    root  /usr/share/nginx/html;
+            index index.html index.htm;
+            try_files $uri $uri/ @rewrites;
+        }
+        # 配置如果匹配不到资源，将url指向 index.html， 在 vue-router 的 history 模式下使用，就不会显示404
+        location @rewrites {
+            rewrite ^(.*)$ /index.html last;
+        }
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   html;
+        }
     }
 }
