1.新增一键删除订单/卡密功能 2.优化系统 更新时间:sj

--- a/Nginx/default.conf
+++ b/Nginx/default.conf
@@ -1,4 +1,4 @@
-ttp {
+http {
     #sendfile 指令指定 nginx 是否调用 sendfile 函数（zero copy 方式）来输出文件，对于普通应用，
     sendfile        on;
     #tcp_nopush     on;
